# founder-operating-system

./: CHANGELOG.md  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  architecture.mmd  decision_engine.md  examples.md  founder_operating_loop.md  founder_reports.md  goal_engine.md  historical_insights.md  memory_engine.md  metrics.md  priority_engine.md  project_engine.md  review_engine.md
docs/releases/: v1.0.0.md
examples/: __init__.py  cli_workflows.py  datasets.py  sample_report.md  scenarios.py  walkthrough.py
src/founder_os/: __init__.py  cli.py  demo.py  models.py
src/founder_os/decisions/: __init__.py  sqlite_store.py  store.py
src/founder_os/goals/: __init__.py  sqlite_store.py  store.py
src/founder_os/insights/: __init__.py  models.py  report.py  service.py
src/founder_os/memory/: __init__.py  sqlite_store.py  store.py
src/founder_os/operating_loop/: __init__.py  models.py  report.py  service.py
src/founder_os/priorities/: __init__.py  sqlite_store.py  store.py
src/founder_os/projects/: __init__.py  sqlite_store.py  store.py
src/founder_os/reporting/: __init__.py  json_export.py  markdown.py  models.py  service.py
src/founder_os/reviews/: __init__.py  snapshot.py  sqlite_store.py  store.py
tests/: __init__.py  test_cli.py  test_decision_store.py  test_demo.py  test_docs.py  test_examples.py  test_goal_store.py  test_insights.py  test_memory_store.py  test_models.py  test_operating_loop.py  test_priority_store.py  test_project_store.py  test_reporting.py  test_review_snapshot.py  test_review_store.py
